# intent

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  LICENSE  all  boost.cmake  buildutil.py  intent.files  intent.includes  pip-selfcheck.json  run_travis_build  sconstruct
.circleci/: config.yml  requirements.txt
antlr/: intentLexer.tokens
assets/: introducing-intent.pptx
cmake/: Doxyfile.in  boost.cmake  common.cmake  detect_sanitizers  detect_sanitizers.py  run_cloudbees_build  run_travis_build  sanitize-blacklist.txt
docs/: README.md  compass.md  hyperlinks.md  logo.md  (+6 more)
old/src/core/data/json/: CMakeLists.txt  assertions.h  features.h  forwards.h  reader.cpp  reader.h  tool.h  value.cpp  value_iterator.inl
src/core/: CMakeLists.txt  address-sanitizer-blacklist.txt  ansi_color-inline.h  ansi_color.cpp  ansi_color.h  ansi_color_palette.cpp  ansi_color_palette.h  ansi_color_tuples.h  arg-inline.h  arg.cpp  arg.h  base_x_encode.h  bitwise_enum.h  chronox-inline.h  chronox.cpp  chronox.h  cmdline-inline.h  cmdline.cpp  cmdline.cxx  cmdline.h  cmdline_validators.cpp  cmdline_validators.h  countof.h  dbc.cpp  dbc.h  enum_operators.h  escape_sequence.cpp  escape_sequence.h  event_codes.cpp  event_codes.h  event_tuples.h  filesystem.h  gil.h  interp.cpp  interp.h  ioutil.cpp  ioutil.h  lexer.h  lifecycle_semantics.h  line_iterator.cpp  (+46 more)
src/core/cli/: ansi_color-inline.h  ansi_color.cpp  ansi_color.h  ansi_color_palette.cpp  ansi_color_palette.h  cmdline-inline.h  cmdline.cpp  cmdline.h  cmdline_validators.cpp  cmdline_validators.h  tty.cpp  tty.h
src/core/data/: xsv.cpp  xsv.h
src/core/data/json/: config.h  value.h  version.h  version.h.in  writer.cpp  writer.h
src/core/dev/: space.cpp  space.h
src/core/err/: circuit_breaker.h
src/core/io/: ioutil.cpp  ioutil.h
src/core/marks/: concurrency_marks.h  lifecycle_marks.h
src/core/mux/: no_op_mutex.h
src/core/net/: curl-channel.cpp  curl-libcurl_callbacks.cpp  curl-session.cpp  curl.cpp  curl.h  headers.cpp  headers.h  http_method.cpp  http_method.h  http_method.tuples  ip_address_type.h  name_resolver.cpp  name_resolver.h
src/core/net/_/: _curl-shared.h  curl-channel-impl.h  curl-libcurl_callbacks.h
src/core/net/curl/: callbacks.h  channel.cpp  channel.h  fwd.h  headers.cpp  headers.h  libcurl_callbacks.cpp  request.cpp  request.h  response.cpp  response.h  session.cpp  session.h  session_state.cpp  session_state.h  session_state.tuples  shared_cookies.h  shared_tls_handshake.h  timeout-inline.h  timeout.cpp  timeout.h  too_slow.cpp  too_slow.h
src/core/net/curl/.private/: channel-impl.h  curl_multi.h  easy.h  libcurl.h  libcurl_callbacks.h  multi.h  request-impl-inline.h  request-impl.h  response-impl-inline.h  response-impl.h  session-impl-inline.h  session-impl.h  share.h
src/core/proc/: process_util.cpp  process_util.h
src/core/process/: process_util.h
src/core/test/: sconscript
src/core/text/: arg-inline.h  arg.cpp  arg.h  base_x_encode.h  escape_sequence.cpp  escape_sequence.h  interp.cpp  interp.h  line_iterator.cpp  line_iterator.h  normalize_identifier.h  numeric_formats.cpp  numeric_formats.h  punycode.h  scan_numbers.h  sslice-inline.h  sslice.cpp  sslice.h  str_view-fwd.h  str_view-inline.h  str_view.cpp  str_view.h  strutil-inline.h  strutil.cpp  strutil.h  trie-inline.h  trie.h  unicode-inline.h  unicode.cpp  unicode.h  unicode_range.cpp  unicode_range.h  wrap_lines.cpp  wrap_lines.h
src/core/time/: assignable_clock-inline.h  assignable_clock.h  chronox-inline.h  chronox.cpp  chronox.h  stopwatch-inline.h  stopwatch.h
src/core/util/: advanced_macros.h  comparison_operators.h  countof.h  dbc.cpp  dbc.h  deprecate.h  enum_operators.h  lifecycle_semantics.h  namespace.h  namespaces.h  ownership_semantics.h  range-inline.h  range.h  scope_guard.h  stringize.h  thread_semantics.h  value_semantics.h
src/core/work/: discrete_task.h  progress_tracker.cpp
src/i/: CMakeLists.txt  cmdline.cpp  main.cpp  sconscript
src/lang/: CMakeLists.txt  build_error.h  code_issue.cpp  code_issue.h  code_site-inline.h  code_site.cpp  code_site.h  ctx.h  expression.cpp  expression.h  issue.cpp  issue.h  issue.tuples  lexer-inline.h  lexer.cpp  lexer.h  note.cpp  note.h  operator.tuples  operator_tuples.h  parse_ctx.h  parse_token.h  parser.cpp  parser.h  sconscript  syntax_error.cpp.autosave  token-inline.h  token.cpp  token.h  token_type-inline.h  token_type.cpp  token_type.h  token_type.tuples  token_type_tuples.h
src/lang/ast/: assignment.h  block.h  compilation_unit.h  conditional.h  definition.h  expression.cpp  expression.h  module.h  node-inline.h  node.cpp  node.h  statement.h  value.h
src/perftest/: CMakeLists.txt  main.cpp  perftest.cpp  perftest.h
test/core/: CMakeLists.txt  ansi_color_palette_test.cpp  ansi_color_test.cpp  arg_test.cpp  asiohiper.cxx  base_x_encode_test.cpp  cmdline_test.cpp  cmdline_validators_test.cpp  dbc_test.cpp  enum_operators_test.cpp  interp_test.cpp  ioutil_test.cpp  line_iterator_test.cpp  parse_token_test.cpp  process_test.cpp  pstr_test.cpp  sanitizer-blacklist.txt.in  sconscript  scope_guard_test.cpp  sslice_test.cpp  stopwatch_test.cpp  stringize_test.cpp  strutil_test.cpp  token_test.cpp  trie_test.cpp  tty_test.cpp  unicode_test.cpp  uuid_test.cpp  wrap_lines_test.cpp
test/core/cli/: ansi_color_palette_test.cpp  ansi_color_test.cpp  cmdline_validators_test.cpp
test/core/err/: circuit_breaker_test.cpp
test/core/io/: ioutil_test.cpp
test/core/net/: curl_test.cpp  headers_test.cpp  name_resolver_test.cpp
test/core/net/curl/: curl_test.cpp
test/core/text/: arg_test.cpp  base_x_encode_test.cpp  normalize_identifier_test.cpp  punycode_test.cpp  str_view_test.cpp  strutil_test.cpp  unicode_range_test.cpp  unicode_test.cpp
test/core/time/: stopwatch_test.cpp
test/core/util/: advanced_macros_test.cpp
test/lang/: CMakeLists.txt  code_site_test.cpp  lexer_test.cpp  parse_token_test.cpp  parser_test.cpp  sconscript  token_test.cpp
test/lang/ast/: node_test.cpp
test/lang/data/: shadowed.i  shadowed.i.csv  shadowed.i.tsv
(+295 files in other folders)
